--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "accelerate>=1.12.0",
     "datasets>=4.5.0",
     "evaluate>=0.4.6",
     "faiss-cpu>=1.13.2",
