--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,8 +4,8 @@ model_name: bert-base-uncased
 max_length: 384
 doc_stride: 128
 
-num_train_samples: 200 
-num_eval_samples: 20
+num_train_samples: null
+num_eval_samples: null
 
 per_device_train_batch_size: 8
 per_device_eval_batch_size: 8
