--- a/.gitignore
+++ b/.gitignore
@@ -32,11 +32,6 @@ pip-wheel-metadata/
 htmlcov/
 .cache/
 
-# =========================
-# Jupyter / notebooks
-# =========================
-.ipynb_checkpoints/
-**/.ipynb_checkpoints/
 
 # =========================
 # OS / Editor
@@ -61,8 +56,8 @@ logs/
 # =========================
 # MLflow
 # =========================
-mlruns/
-mlartifacts/
+# mlruns/
+# artifacts/
 
 # =========================
 # Model checkpoints (HF / Torch)
